# neurodoc-mcp

./: .env.example  Dockerfile  README.md  docker-compose.yml  githook.sh  install.sh  pyproject.toml  server.py
.github/workflows/: publish.yml
deploy/: docker-compose.prod.yml  nginx.conf  setup-server.sh
src/neurodoc_mcp/: __init__.py  __main__.py  server.py
